--- a/QuartzNServiceBusSample.Host/App.config
+++ b/QuartzNServiceBusSample.Host/App.config
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core"/>
-    <section name="MsmqTransportConfig" type="NServiceBus.Config.MsmqTransportConfig, NServiceBus.Core"/>
+    
+    <section name="MsmqTransportConfig" type="NServiceBus.Config.MsmqTransportConfig, NServiceBus.Core" />
   </configSections>
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
-  <MsmqTransportConfig MaxRetries="5" NumberOfWorkerThreads="1"/>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
+  
+  <MsmqTransportConfig MaxRetries="5" NumberOfWorkerThreads="1" />
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
