--- a/QuartzNServiceBusSample/App.config
+++ b/QuartzNServiceBusSample/App.config
@@ -1,27 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core"/>
-    <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
+    
+    <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
   </configSections>
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
+  
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Messages="QuartzNServiceBusSample.Messages" Endpoint="QuartzNServiceBusSample.Host"/>
+      <add Messages="QuartzNServiceBusSample.Messages" Endpoint="QuartzNServiceBusSample.Host" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <quartz>
-    <add key="quartz.scheduler.instanceName" value="DefaultQuartzScheduler"/>
-    <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz"/>
-    <add key="quartz.threadPool.threadCount" value="1"/>
-    <add key="quartz.threadPool.threadPriority" value="Normal"/>
-    <add key="quartz.jobStore.misfireThreshold" value="60000"/>
-    <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz"/>
-    <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.StdAdoDelegate, Quartz"/>
-    <add key="quartz.jobStore.tablePrefix" value="QRTZ_"/>
-    <add key="quartz.jobStore.dataSource" value="myDS"/>
-    <add key="quartz.dataSource.myDS.connectionString" value="server=.\SQLExpress;database=QuartzNServiceBusSample;Integrated Security=true;"/>
-    <add key="quartz.dataSource.myDS.provider" value="SqlServer-20"/>
+    <add key="quartz.scheduler.instanceName" value="DefaultQuartzScheduler" />
+    <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
+    <add key="quartz.threadPool.threadCount" value="1" />
+    <add key="quartz.threadPool.threadPriority" value="Normal" />
+    <add key="quartz.jobStore.misfireThreshold" value="60000" />
+    <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz" />
+    <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.StdAdoDelegate, Quartz" />
+    <add key="quartz.jobStore.tablePrefix" value="QRTZ_" />
+    <add key="quartz.jobStore.dataSource" value="myDS" />
+    <add key="quartz.dataSource.myDS.connectionString" value="server=.\SQLExpress;database=QuartzNServiceBusSample;Integrated Security=true;" />
+    <add key="quartz.dataSource.myDS.provider" value="SqlServer-20" />
   </quartz>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
