--- a/QuartzNServiceBusSample.Host/App.config
+++ b/QuartzNServiceBusSample.Host/App.config
@@ -1,9 +1,71 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
     <section name="MsmqTransportConfig" type="NServiceBus.Config.MsmqTransportConfig, NServiceBus.Core" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+    </sectionGroup>
   </configSections>
-  
+
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.Log4Net.Universal.Log4NetFactoryAdapter, Common.Logging.Log4Net.Universal" />
+      <arg key="configType" value="INLINE"/>
+      <arg key="configFile" value="Trace/application.log.txt"/>
+      <arg key="level" value="ALL" />
+
+    </logging>
+  </common>
+
   <MsmqTransportConfig MaxRetries="5" NumberOfWorkerThreads="1" />
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" /></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+  </startup>
+
+  <log4net>
+
+    <appender name="console" type="log4net.Appender.ColoredConsoleAppender">
+      <mapping>
+        <level value="WARN" />
+        <foreColor value="Yellow,HighIntensity" />
+      </mapping>
+      <mapping>
+        <level value="ERROR" />
+        <foreColor value="Red" />
+      </mapping>
+      <mapping>
+        <level value="FATAL" />
+        <foreColor value="White,HighIntensity" />
+        <backColor value="Red" />
+      </mapping>
+      <mapping>
+        <level value="INFO" />
+        <foreColor value="White" />
+      </mapping>
+      <mapping>
+        <level value="DEBUG" />
+        <foreColor value="Green" />
+      </mapping>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%-3thread] %-5level %logger [%ndc] - %message%newline" />
+      </layout>
+    </appender>
+
+    <root>
+      <priority value="ALL" />
+      <appender-ref ref="console" />
+    </root>
+
+  </log4net>
+
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+
+</configuration>
