--- a/QuartzNServiceBusSample.Host/packages.config
+++ b/QuartzNServiceBusSample.Host/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="1.2.10" targetFramework="net40" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net462" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net462" />
+  <package id="Common.Logging.Log4Net.Universal" version="1.0.1" targetFramework="net462" />
+  <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="NServiceBus" version="6.2.1" targetFramework="net462" />
   <package id="NServiceBus.Host" version="7.0.1" targetFramework="net462" />
+  <package id="NServiceBus.Log4Net" version="2.0.0" targetFramework="net462" />
 </packages>
