--- a/QuartzNServiceBusSample/packages.config
+++ b/QuartzNServiceBusSample/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.0.0" targetFramework="net40" />
-  <package id="log4net" version="1.2.10" targetFramework="net40" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net462" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net462" />
+  <package id="Common.Logging.Log4Net.Universal" version="1.0.1" targetFramework="net462" />
+  <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="NServiceBus" version="6.2.1" targetFramework="net462" />
   <package id="NServiceBus.Host" version="7.0.1" targetFramework="net462" />
-  <package id="Quartz" version="2.0.1" targetFramework="net40" />
+  <package id="NServiceBus.Log4Net" version="2.0.0" targetFramework="net462" />
+  <package id="Quartz" version="2.5.0" targetFramework="net462" />
 </packages>
